--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   play_redis:
     image: redis:latest
     container_name: play_redis
+    volumes:
+      - /tmp/play_redis:/data
     ports:
       - "16379:6379"
 
