--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: redis:latest
     container_name: play_redis
     volumes:
-      - /tmp/play_redis:/data
+      - ./redis_data:/data
     ports:
       - "16379:6379"
 
